dist.x86_64-pc-linux-gnu/etc/python/grass/lib/gis.py


# include/grass/defs/gis.h: 409
if _libs["grass_gis.8.5"].has("G_ilist_add", "cdecl"):
    G_ilist_add = _libs["grass_gis.8.5"].get("G_ilist_add", "cdecl")
    G_ilist_add.argtypes = [POINTER(struct_ilist), c_int]
    G_ilist_add.restype = None

# include/grass/defs/gis.h: 412
if _libs["grass_gis.8.5"].has("G_intersect_line_segments", "cdecl"):
    G_intersect_line_segments = _libs["grass_gis.8.5"].get(
        "G_intersect_line_segments", "cdecl"
    )
    G_intersect_line_segments.argtypes = [
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
        POINTER(c_double),
        POINTER(c_double),
        POINTER(c_double),
        POINTER(c_double),
    ]
    G_intersect_line_segments.restype = c_int

# include/grass/defs/gis.h: 417
if _libs["grass_gis.8.5"].has("G_is_gisbase", "cdecl"):
    G_is_gisbase = _libs["grass_gis.8.5"].get("G_is_gisbase", "cdecl")
    G_is_gisbase.argtypes = [String]
    G_is_gisbase.restype = c_int

# include/grass/defs/gis.h: 418
if _libs["grass_gis.8.5"].has("G_is_location", "cdecl"):
    G_is_location = _libs["grass_gis.8.5"].get("G_is_location", "cdecl")
    G_is_location.argtypes = [String]
    G_is_location.restype = c_int

# include/grass/defs/gis.h: 419
if _libs["grass_gis.8.5"].has("G_is_mapset", "cdecl"):
    G_is_mapset = _libs["grass_gis.8.5"].get("G_is_mapset", "cdecl")
    G_is_mapset.argtypes = [String]
    G_is_mapset.restype = c_int

# include/grass/defs/gis.h: 422
if _libs["grass_gis.8.5"].has("G_create_key_value", "cdecl"):
    G_create_key_value = _libs["grass_gis.8.5"].get("G_create_key_value", "cdecl")
    G_create_key_value.argtypes = []
    G_create_key_value.restype = POINTER(struct_Key_Value)

# include/grass/defs/gis.h: 423
if _libs["grass_gis.8.5"].has("G_set_key_value", "cdecl"):
    G_set_key_value = _libs["grass_gis.8.5"].get("G_set_key_value", "cdecl")
    G_set_key_value.argtypes = [String, String, POINTER(struct_Key_Value)]
    G_set_key_value.restype = None

# include/grass/defs/gis.h: 424
if _libs["grass_gis.8.5"].has("G_find_key_value", "cdecl"):
    G_find_key_value = _libs["grass_gis.8.5"].get("G_find_key_value", "cdecl")
    G_find_key_value.argtypes = [String, POINTER(struct_Key_Value)]
    G_find_key_value.restype = c_char_p

# include/grass/defs/gis.h: 425
if _libs["grass_gis.8.5"].has("G_free_key_value", "cdecl"):
    G_free_key_value = _libs["grass_gis.8.5"].get("G_free_key_value", "cdecl")
    G_free_key_value.argtypes = [POINTER(struct_Key_Value)]
    G_free_key_value.restype = None

# include/grass/defs/gis.h: 428
if _libs["grass_gis.8.5"].has("G_fwrite_key_value", "cdecl"):
    G_fwrite_key_value = _libs["grass_gis.8.5"].get("G_fwrite_key_value", "cdecl")
    G_fwrite_key_value.argtypes = [POINTER(FILE), POINTER(struct_Key_Value)]
    G_fwrite_key_value.restype = c_int

# include/grass/defs/gis.h: 429
if _libs["grass_gis.8.5"].has("G_fread_key_value", "cdecl"):
    G_fread_key_value = _libs["grass_gis.8.5"].get("G_fread_key_value", "cdecl")
    G_fread_key_value.argtypes = [POINTER(FILE)]
    G_fread_key_value.restype = POINTER(struct_Key_Value)

# include/grass/defs/gis.h: 432
if _libs["grass_gis.8.5"].has("G_write_key_value_file", "cdecl"):
    G_write_key_value_file = _libs["grass_gis.8.5"].get(
        "G_write_key_value_file", "cdecl"
    )
    G_write_key_value_file.argtypes = [String, POINTER(struct_Key_Value)]
    G_write_key_value_file.restype = None

# include/grass/defs/gis.h: 433
if _libs["grass_gis.8.5"].has("G_read_key_value_file", "cdecl"):
    G_read_key_value_file = _libs["grass_gis.8.5"].get("G_read_key_value_file", "cdecl")
    G_read_key_value_file.argtypes = [String]
    G_read_key_value_file.restype = POINTER(struct_Key_Value)

# include/grass/defs/gis.h: 436
if _libs["grass_gis.8.5"].has("G_update_key_value_file", "cdecl"):
    G_update_key_value_file = _libs["grass_gis.8.5"].get(
        "G_update_key_value_file", "cdecl"
    )
    G_update_key_value_file.argtypes = [String, String, String]
    G_update_key_value_file.restype = None

# include/grass/defs/gis.h: 437
if _libs["grass_gis.8.5"].has("G_lookup_key_value_from_file", "cdecl"):
    G_lookup_key_value_from_file = _libs["grass_gis.8.5"].get(
        "G_lookup_key_value_from_file", "cdecl"
    )
    G_lookup_key_value_from_file.argtypes = [String, String, POINTER(c_char), c_int]
    G_lookup_key_value_from_file.restype = c_int

# include/grass/defs/gis.h: 440
if _libs["grass_gis.8.5"].has("G_legal_filename", "cdecl"):
    G_legal_filename = _libs["grass_gis.8.5"].get("G_legal_filename", "cdecl")
    G_legal_filename.argtypes = [String]
    G_legal_filename.restype = c_int

# include/grass/defs/gis.h: 441
if _libs["grass_gis.8.5"].has("G_check_input_output_name", "cdecl"):
    G_check_input_output_name = _libs["grass_gis.8.5"].get(
        "G_check_input_output_name", "cdecl"
    )
    G_check_input_output_name.argtypes = [String, String, c_int]
    G_check_input_output_name.restype = c_int

# include/grass/defs/gis.h: 444
if _libs["grass_gis.8.5"].has("G_set_distance_to_line_tolerance", "cdecl"):
    G_set_distance_to_line_tolerance = _libs["grass_gis.8.5"].get(
        "G_set_distance_to_line_tolerance", "cdecl"
    )
    G_set_distance_to_line_tolerance.argtypes = [c_double]
    G_set_distance_to_line_tolerance.restype = None

# include/grass/defs/gis.h: 445
if _libs["grass_gis.8.5"].has("G_distance2_point_to_line", "cdecl"):
    G_distance2_point_to_line = _libs["grass_gis.8.5"].get(
        "G_distance2_point_to_line", "cdecl"
    )
    G_distance2_point_to_line.argtypes = [
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
    ]
    G_distance2_point_to_line.restype = c_double

# include/grass/defs/gis.h: 449
if _libs["grass_gis.8.5"].has("G_list_element", "cdecl"):
    G_list_element = _libs["grass_gis.8.5"].get("G_list_element", "cdecl")
    G_list_element.argtypes = [
        String,
        String,
        String,
        CFUNCTYPE(UNCHECKED(c_int), String, String, String),
    ]
    G_list_element.restype = None

# include/grass/defs/gis.h: 451
if _libs["grass_gis.8.5"].has("G_list", "cdecl"):
    G_list = _libs["grass_gis.8.5"].get("G_list", "cdecl")
    G_list.argtypes = [c_int, String, String, String]
    G_list.restype = POINTER(POINTER(c_char))

# include/grass/defs/gis.h: 452
if _libs["grass_gis.8.5"].has("G_free_list", "cdecl"):
    G_free_list = _libs["grass_gis.8.5"].get("G_free_list", "cdecl")
    G_free_list.argtypes = [POINTER(POINTER(c_char))]
    G_free_list.restype = None

# include/grass/defs/gis.h: 455
if _libs["grass_gis.8.5"].has("G_lat_format", "cdecl"):
    G_lat_format = _libs["grass_gis.8.5"].get("G_lat_format", "cdecl")
    G_lat_format.argtypes = [c_double, String]
    G_lat_format.restype = None

# include/grass/defs/gis.h: 456
if _libs["grass_gis.8.5"].has("G_lat_format_string", "cdecl"):
    G_lat_format_string = _libs["grass_gis.8.5"].get("G_lat_format_string", "cdecl")
    G_lat_format_string.argtypes = []
    G_lat_format_string.restype = c_char_p

# include/grass/defs/gis.h: 457
if _libs["grass_gis.8.5"].has("G_lon_format", "cdecl"):
    G_lon_format = _libs["grass_gis.8.5"].get("G_lon_format", "cdecl")
    G_lon_format.argtypes = [c_double, String]
    G_lon_format.restype = None

# include/grass/defs/gis.h: 458
if _libs["grass_gis.8.5"].has("G_lon_format_string", "cdecl"):
    G_lon_format_string = _libs["grass_gis.8.5"].get("G_lon_format_string", "cdecl")
    G_lon_format_string.argtypes = []
    G_lon_format_string.restype = c_char_p

# include/grass/defs/gis.h: 459
if _libs["grass_gis.8.5"].has("G_llres_format", "cdecl"):
    G_llres_format = _libs["grass_gis.8.5"].get("G_llres_format", "cdecl")
    G_llres_format.argtypes = [c_double, String]
    G_llres_format.restype = None

# include/grass/defs/gis.h: 460
if _libs["grass_gis.8.5"].has("G_llres_format_string", "cdecl"):
    G_llres_format_string = _libs["grass_gis.8.5"].get("G_llres_format_string", "cdecl")
    G_llres_format_string.argtypes = []
    G_llres_format_string.restype = c_char_p

# include/grass/defs/gis.h: 461
if _libs["grass_gis.8.5"].has("G_lat_parts", "cdecl"):
    G_lat_parts = _libs["grass_gis.8.5"].get("G_lat_parts", "cdecl")
    G_lat_parts.argtypes = [
        c_double,
        POINTER(c_int),
        POINTER(c_int),
        POINTER(c_double),
        String,
    ]
    G_lat_parts.restype = None

# include/grass/defs/gis.h: 462
if _libs["grass_gis.8.5"].has("G_lon_parts", "cdecl"):
    G_lon_parts = _libs["grass_gis.8.5"].get("G_lon_parts", "cdecl")
    G_lon_parts.argtypes = [
        c_double,
        POINTER(c_int),
        POINTER(c_int),
        POINTER(c_double),
        String,
    ]
    G_lon_parts.restype = None

# include/grass/defs/gis.h: 465
if _libs["grass_gis.8.5"].has("G_lat_scan", "cdecl"):
    G_lat_scan = _libs["grass_gis.8.5"].get("G_lat_scan", "cdecl")
    G_lat_scan.argtypes = [String, POINTER(c_double)]
    G_lat_scan.restype = c_int

# include/grass/defs/gis.h: 466
if _libs["grass_gis.8.5"].has("G_lon_scan", "cdecl"):
    G_lon_scan = _libs["grass_gis.8.5"].get("G_lon_scan", "cdecl")
    G_lon_scan.argtypes = [String, POINTER(c_double)]
    G_lon_scan.restype = c_int

# include/grass/defs/gis.h: 467
if _libs["grass_gis.8.5"].has("G_llres_scan", "cdecl"):
    G_llres_scan = _libs["grass_gis.8.5"].get("G_llres_scan", "cdecl")
    G_llres_scan.argtypes = [String, POINTER(c_double)]
    G_llres_scan.restype = c_int

# include/grass/defs/gis.h: 470
if _libs["grass_gis.8.5"].has("G_location", "cdecl"):
    G_location = _libs["grass_gis.8.5"].get("G_location", "cdecl")
    G_location.argtypes = []
    G_location.restype = c_char_p

# include/grass/defs/gis.h: 471
if _libs["grass_gis.8.5"].has("G_location_path", "cdecl"):
    G_location_path = _libs["grass_gis.8.5"].get("G_location_path", "cdecl")
    G_location_path.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_location_path.restype = ReturnString
    else:
        G_location_path.restype = String
        G_location_path.errcheck = ReturnString

# include/grass/defs/gis.h: 474
if _libs["grass_gis.8.5"].has("G_srand48", "cdecl"):
    G_srand48 = _libs["grass_gis.8.5"].get("G_srand48", "cdecl")
    G_srand48.argtypes = [c_long]
    G_srand48.restype = None

# include/grass/defs/gis.h: 475
if _libs["grass_gis.8.5"].has("G_srand48_auto", "cdecl"):
    G_srand48_auto = _libs["grass_gis.8.5"].get("G_srand48_auto", "cdecl")
    G_srand48_auto.argtypes = []
    G_srand48_auto.restype = c_long

# include/grass/defs/gis.h: 476
if _libs["grass_gis.8.5"].has("G_lrand48", "cdecl"):
    G_lrand48 = _libs["grass_gis.8.5"].get("G_lrand48", "cdecl")
    G_lrand48.argtypes = []
    G_lrand48.restype = c_long

# include/grass/defs/gis.h: 477
if _libs["grass_gis.8.5"].has("G_mrand48", "cdecl"):
    G_mrand48 = _libs["grass_gis.8.5"].get("G_mrand48", "cdecl")
    G_mrand48.argtypes = []
    G_mrand48.restype = c_long

# include/grass/defs/gis.h: 478
if _libs["grass_gis.8.5"].has("G_drand48", "cdecl"):
    G_drand48 = _libs["grass_gis.8.5"].get("G_drand48", "cdecl")
    G_drand48.argtypes = []
    G_drand48.restype = c_double

# include/grass/defs/gis.h: 481
if _libs["grass_gis.8.5"].has("G_set_ls_filter", "cdecl"):
    G_set_ls_filter = _libs["grass_gis.8.5"].get("G_set_ls_filter", "cdecl")
    G_set_ls_filter.argtypes = [
        CFUNCTYPE(UNCHECKED(c_int), String, POINTER(None)),
        POINTER(None),
    ]
    G_set_ls_filter.restype = None

# include/grass/defs/gis.h: 482
if _libs["grass_gis.8.5"].has("G_set_ls_exclude_filter", "cdecl"):
    G_set_ls_exclude_filter = _libs["grass_gis.8.5"].get(
        "G_set_ls_exclude_filter", "cdecl"
    )
    G_set_ls_exclude_filter.argtypes = [
        CFUNCTYPE(UNCHECKED(c_int), String, POINTER(None)),
        POINTER(None),
    ]
    G_set_ls_exclude_filter.restype = None
